# madgicx

./: .gitignore  .gitmodules  pyproject.toml
mining/: app.cfg
mining/db/ad/indicators/: create_db_schema.sql  create_db_tables.sql
mining/modules/budget/evaluation/: __propAttr__.py  adSetMovement.py  mcmcDataCompliance.py
mining/modules/budget/optimization/: __propAttr__.py  __routes__.py  predGoalSpend.py  rwAdsDataFile.py  rwAdsdata.py
mining/notebooks/budget/evaluation/: LinReg_budget_predict.ipynb  Obj1_hyp_test.ipynb  chisqr_eval_all_features.ipynb  data_comply_check_mcmc.ipynb  data_validation_for_mcmc.ipynb  hhm_budget_optimization.ipynb  madgicx_ad_perform_eval_algo.ipynb  mx_perform_metrics.ipynb  mx_stat_significance.ipynb  pycaret_analysis.ipynb  tfp_budget_predict.ipynb  tfp_mcmc_spend_predict.ipynb  tfp_multivariate_budget_predict.ipynb
mining/notebooks/budget/optimization/: bayes.ipynb  create_obj_opt_goal_data.ipynb  goal_budget_opt.ipynb  synth_mcmc_sample.ipynb  tfp_mcmc_spend_predict.ipynb
mining/notebooks/budget/performance/: AB_test_Obj_1.0.ipynb
wrangler/: app.cfg
wrangler/notebooks/budget/etl/: bigquerySparkSQLDBwls.ipynb  profilingAllData.ipynb
